# ur

./: .gitignore  Dockerfile  README.md  base_moveit_setup_readme.md  docker-compose.windows.yml  docker-compose.yml  frames_2026-02-11_16.52.47.gv  opus_agent.txt
servo_demo_ws/src/ur_servo_demo/: package.xml  setup.cfg  setup.py
servo_demo_ws/src/ur_servo_demo/config/: ur_servo.yaml
servo_demo_ws/src/ur_servo_demo/launch/: ur_servo_demo.launch.py
servo_demo_ws/src/ur_servo_demo/ur_servo_demo/: joint_slider.py  keyboard_demo_cmd.txt  pose_demo.py  servo_keyboard.py
teleoperation/src/ur_cpp_control/: CMakeLists.txt
teleoperation/src/ur_cpp_control/launch/: plan_motion.launch.py
teleoperation/src/ur_cpp_control/src/: execute_plan_node.cpp
teleoperation_ws/: robot.xml
teleoperation_ws/src/imu_sim/: package.xml  setup.cfg  setup.py
teleoperation_ws/src/imu_sim/config/: clean_servo_config.yaml  teleop.rviz  universal_servo_config.yaml  ur_servo_config.yaml
teleoperation_ws/src/imu_sim/imu_sim/: clock_bridge.py  imu_sim_server.py  joint_state_relay.py  qos_bridge.py  safety_node.py  simple_listener.py  universal_bridge.py
teleoperation_ws/src/imu_sim/launch/: teleop_demo.launch.py  test_servo.launch.py
teleoperation_ws/src/imu_sim/scripts/: debug_time.py  frames_2026-02-02_23.01.15.gv  probe_pipeline.py  test_pub.py
ur5e_config/src/ur_moveit_config/launch/: ur_moveit.launch.py
ur_cpp_control_ws/: ur_cpp_control_ws_readme.md
ur_cpp_control_ws/src/ur_cpp_control/: CMakeLists.txt  package.xml
ur_cpp_control_ws/src/ur_cpp_control/config/: motion_planner.yaml
ur_cpp_control_ws/src/ur_cpp_control/launch/: execute_service.launch.py  imu_servo.launch.py  imu_teleop.launch.py  plan_motion.launch.py
ur_cpp_control_ws/src/ur_cpp_control/src/: imu_sim_node.cpp  imu_simulator_node.cpp  imu_to_servo_node.cpp  plan_request_node.cpp
ur_dashboard_ws/: README.md
ur_dashboard_ws/src/ur_dashboard_ui/: package.xml  setup.cfg  setup.py
ur_dashboard_ws/src/ur_dashboard_ui/launch/: ur_dashboard_ui.launch.py
ur_dashboard_ws/src/ur_dashboard_ui/ur_dashboard_ui/: dashboard_ui.py
ur_imu_teleop_ws/: ur_imu_teleop_ws_readme.md
ur_imu_teleop_ws/src/ur_imu_teleop/: package.xml  setup.cfg  setup.py
ur_imu_teleop_ws/src/ur_imu_teleop/launch/: imu_teleop.launch.py
ur_imu_teleop_ws/src/ur_imu_teleop/ur_imu_teleop/: __init__.py  imu_servo_node.py  imu_sim_node.py
ur_teleop_ws/src/ur_teleop/: package.xml  setup.cfg  setup.py
ur_teleop_ws/src/ur_teleop/config/: ur_servo.yaml
ur_teleop_ws/src/ur_teleop/launch/: ur_teleop.launch.py
ur_teleop_ws/src/ur_teleop/ur_teleop/: hand_pose_sim.py  imu_real_driver.py  pose_controller.py
