<?xml version="1.0"?>
<package format="3">
  <name>ur_dashboard_ui</name>
  <version>0.1.0</version>
  <description>Qt-based dashboard UI for discovering and calling UR dashboard services.</description>
  <maintainer email="dev@openai.com">OpenAI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
